Added Operating System Specific Implementations.
Added a Linux and Windows Specific implementation due to the difference
in the way that the terminal is accessed and altered.

Currently Windows had the only implementation details.

Updated the CMake file to build properly on both systems.

Signed-off-by: GoldenBug <peter.fetros@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,33 @@ project(HealthBar)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(HealthBar library.cpp library.h)
+if (MINGW)
+    add_library(HealthBar STATIC
+            HealthBarAPI.cpp
+            HealthBarAPI.h
+            HealthBar_Win.cpp
+            HealthBar.h)
+endif (MINGW)
+
+if (LINUX)
+    add_library(HealthBar STATIC
+            HealthBarAPI.cpp
+            HealthBarAPI.h
+            HealthBar_Unix.cpp
+            HealthBar.h)
+else ()
+    add_library(HealthBar STATIC
+            HealthBarAPI.cpp
+            HealthBarAPI.h
+            HealthBar_Win.cpp
+            HealthBar.h)
+endif ()
+
+
+SET(APP_EXE StaticTest)
+
+ADD_EXECUTABLE(${APP_EXE}
+        main.cpp)
+
+TARGET_LINK_LIBRARIES(${APP_EXE}
+        HealthBar)
