Added Test Code and Removed Unneeded APIs
Added test code to show the progress bar.

Removed the APIs for passing in integers as arguments. Now requires the
user pass in a double or cast an int to a double.

Signed-off-by: GoldenBug <peter.fetros@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,17 @@ if (LINUX)
             HealthBarAPI.cpp
             HealthBarAPI.h
             HealthBar_Unix.cpp
-            HealthBar.h)
+            HealthBar.h
+            Utils.cpp
+            Utils.h)
 else ()
     add_library(HealthBar STATIC
             HealthBarAPI.cpp
             HealthBarAPI.h
             HealthBar_Win.cpp
-            HealthBar.h)
+            HealthBar.h
+            Utils.cpp
+            Utils.h)
 endif ()
 
 
