Added Initial Linux Version of Library.
Added functionality to non-bottom terminal progress bar.
Also cleaned up CMake file so that it should now properly detect Linux
and build the correct version of the library.

Signed-off-by: Peter Fetros <47762798+GoldenBug@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,7 @@ project(HealthBar)
 
 set(CMAKE_CXX_STANDARD 14)
 
-if (MINGW)
-    add_library(HealthBar STATIC
-            HealthBarAPI.cpp
-            HealthBarAPI.h
-            HealthBar_Win.cpp
-            HealthBar.h)
-endif (MINGW)
-
-if (LINUX)
+if (UNIX)
     add_library(HealthBar STATIC
             HealthBarAPI.cpp
             HealthBarAPI.h
