Fixed Library not Setting Header To Include.
Signed-off-by: GoldenBug <peter.fetros@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HealthBar)
 
 set(CMAKE_CXX_STANDARD 14)
 
-if (UNIX)
+if (UNIX AND NOT CYGWIN)
     add_library(HealthBar STATIC
             HealthBarAPI.cpp
             HealthBarAPI.h
@@ -21,11 +21,10 @@ else ()
             Utils.h)
 endif ()
 
+set_target_properties(HealthBar PROPERTIES PUBLIC_HEADER "HealthBarAPI.h")
 
 SET(APP_EXE StaticTest)
-
 ADD_EXECUTABLE(${APP_EXE}
         main.cpp)
-
 TARGET_LINK_LIBRARIES(${APP_EXE}
         HealthBar)
