--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,11 @@ set(HEALTHBAR_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(HEALTHBAR_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
 set(HEALTHBAR_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
 
-set(DIVISION_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/division)
+set(HEALTHBAR_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/healthbar)
 
 include_directories(${HEALTHBAR_INSTALL_INCLUDE_DIR})
 include_directories(${HEALTHBAR_HEADERS_DIR})
 
 add_subdirectory(src)
-add_subdirectory(test)
+target_include_directories(healthbar PUBLIC src)
+#add_subdirectory(test)
